--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  title>Echoes : Entities </title>
+  <title>Echoes : Entities </title>
   <h2 id = "entities">Entities- Dement, Blackout, Sadness, Past, Neuroxus
 </h2>
 
