--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ footer a:hover {
   <body> 
   <div class="topnav">
     <a href="https://josh-hutcherson.github.io/Echoes-Roblox-game/">Home</a>
-    <a href="https://josh-hutcherson.github.io/Entities/">Entities</a>
-    <a class="active" href="https://josh-hutcherson.github.io/Settings/">Settings</a>
+    <a class="active" href="https://josh-hutcherson.github.io/Entities/">Entities</a>
+    <a href="https://josh-hutcherson.github.io/Settings/">Settings</a>
 </div>
   <h2 id = "entities">Entities- Dement, Blackout, Sadness, Past, Neuroxus
 </h2>
