--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ footer a:hover {
   <p>
 Dement will invert controls, Blur screen out, and play a clock chiming sound every 5 seconds.
 Makes you do a brain minigame (puzzle to fix brain, fix within 30 seconds you survive) and will kill you if you fail the brain minigame.
-Dement will spawn randomly during  <a href = "#CT">The Cortex Castle</a> , which is the second setting where the game takes place. 
+Dement will spawn randomly during  <a href = "https://josh-hutcherson.github.io/Settings/">The Cortex Castle</a> , which is the second setting where the game takes place. 
     Additionally, it can also appear in The Archive of the Unspoken, which serves as the third location in the game.
 When your character meets their demise, a captivating visual unfolds: the clock’s hands spin to 3:00, and the clock itself begins to melt,
     reminiscent of the iconic <a href = "https://www.bing.com/search?go=Search&q=salvidor+dali+clock+painting&qs=ds&form=QBRE">Salvidor Dali Painting</a>
@@ -139,7 +139,7 @@ When you die the screen will turn white leaving black streaks to start filling t
   Resembles the Over the Garden Wall scene with Wirt falling through the ice in episode 8.
 When everything turns black, 
   a face resembling the <a href = "https://www.bing.com/search?q=no+players+online+entity&PC=U316&FORM=CHROMN">NO PLAYERS ONLINE</a> entity peeks out from the darkness.
-Blackout will spawn randomly at the <a href = "#CD">Cerebellum docks
+Blackout will spawn randomly at the <a href = "https://josh-hutcherson.github.io/Settings/">Cerebellum docks
 </a></p>
    <img src="Blackout Concept.jpeg" alt="Alt text" title="Optional title" width = "250" height = "150">
 <h2>SADNESS:</h2>
@@ -153,7 +153,7 @@ You find yourself in a four-way room.
    <img src="Sadness concept.jpeg" alt="Alt text" title="Optional title">
 
 <h2>PAST:</h2>
-<p>In the eerie halls of the <a href = "#archive"> Archive of the Unspoken</a>, two massive doors mark the entrance to where Past resides. 
+<p>In the eerie halls of the <a href = "https://josh-hutcherson.github.io/Settings/"> Archive of the Unspoken</a>, two massive doors mark the entrance to where Past resides. 
   Once inside the dining room, Past remains dormant unless you dare to touch the food on the table. 
   A cutscene unfolds as you consume the meal, awakening Past. 
   Now, your escape begins—a frantic parkour chase, dodging falling objects from above. 
@@ -176,7 +176,7 @@ Past, when it claims you, a mirror reveals your skeletal reflection.
   Its tendrils of dark mist symbolize the grip of negativity on the mind. 
   At its core pulses a brain, signifying dominion over the mental realm. 
   Born from subconscious fears, Neuroxus thrives within the protagonist’s coma, feeding off their inability to awaken.
-  The climactic showdown occurs at the <a href = "#SC">Summit of consciousness</a>, the final locale in the enigmatic world of Echoes. 
+  The climactic showdown occurs at the <a href = "https://josh-hutcherson.github.io/Settings/">Summit of consciousness</a>, the final locale in the enigmatic world of Echoes. 
   Here, tranquility envelops the protagonist. Instead of a battle, a profound dialogue unfolds—a test of willpower.
   Just as victory Is assured, there's a blinding light, and a faint whisper from the Leading Thought saying: "Not yet. This is not the end, only the beginning."
   Then there is ending music and the game ends.
