--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ footer a:hover {
     <a class="active" href="https://josh-hutcherson.github.io/Entities/">Entities</a>
     <a href="https://josh-hutcherson.github.io/Settings/">Settings</a>
 </div>
-  <h1 id = "entities">Entities- Dement, Blackout, Sadness, Past, Neuroxus
+  <h1 id = "entities">ENTITIES- DEMENT, BLACKOUT, SADNESS, PAST, NEUROXUS
 </h1>
 
   <h2>DEMENT:</h2>
