--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@ footer a:hover {
     <a href="https://josh-hutcherson.github.io/Echoes-Roblox-game/">Home</a>
     <a class="active" href="https://josh-hutcherson.github.io/Entities/">Entities</a>
     <a href="https://josh-hutcherson.github.io/Settings/">Settings</a>
+     <a href="https://josh-hutcherson.github.io/Click-Balloons-/">Play a game</a>
 </div>
   <h1 id = "entities">ENTITIES- DEMENT, BLACKOUT, SADNESS, PAST, NEUROXUS
 </h1>
