--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@ footer a:hover {
   <body> 
   <div class="topnav">
     <a href="https://josh-hutcherson.github.io/Echoes-Roblox-game/">Home</a>
+    
+      <a href="https://josh-hutcherson.github.io/All-About-Todd/">All bout Todd</a>
+      <a href = "https://josh-hutcherson.github.io/ToddsRecipeBook/">Recipe Book</a>
+      <a href = "https://josh-hutcherson.github.io/Ask-me-something-/">Ask me something</a>
     <a class="active" href="https://josh-hutcherson.github.io/Entities/">Entities</a>
     <a href="https://josh-hutcherson.github.io/Settings/">Settings</a>
      <a href="https://josh-hutcherson.github.io/Somethings-Sus/">Play a game</a>
